<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- LOG IN STRINGS  -->
    
    <string name="txt_login_welcome">Welcome to Healthy+</string>
    <string name="txt_userinfo">PERSONAL INFO</string>
    <string name="btn_create_user">Create User</string>
    <string name="btn_confirm">¡Create now!</string>
    <string name="btn_access">Access now</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">Username</string>
    <string name="txt_health_info">MEASURES</string> 
    <string name="txt_logininfo">LOG-IN</string> 
      
    
	<string name="app_description">Welcome to &#8230;</string>
    <string name="weight">Weight</string>
	<string name="height">Height</string>
	<string name="age">Age</string>
	<string name="gender">Gender</string>		
    
    <string name="app_name">Healthy+ Pro</string>
    
	<string name="select">Select gender</string>
	<string name="btnCalculate">Calculate now!</string>
	<string name="results">¡These are the results!</string>
	<string name="gain_title">To gain weight:</string>
	<string name="maintain_title">To maintain the same weight:</string>
	<string name="loss_title">To loss weight:</string>
	
	<string name="settings_title">Settings</string>
	<string name="exit_title">Exit</string>
	
	<string name="sum_language">Select the main language</string>
    <string name="title_language">Select the language</string>
	<string name="cat_language">Language</string>
	
	<string name="cat_help">Help</string>
	
	<string name="cat_usage">Usage</string>
	<string name="sum_measure">Select a measure type</string>
	<string name="title_measure">Measure Type</string>
	<string name="sum_about">About the app</string>
	<string name="title_about">About</string>
	<string name="about_message">This is a tool used to measure the daily calories you would need to consume whether to loss, gain 
	    		or maintain your weight depending on your weight, height, age and gender. \n</string>
	
	<string name="btn_accept">Accept</string>
	<string name="btn_cancel">Cancel</string>
	
	
	<string name="splash_desc">This is the splash</string>
	<!-- <string name=""></string> -->
	
	<string name="percentile_text">Under construction. It will be available in version 1.1</string>
	<string-array name="gender_list">
		<item>Male</item>
		<item>Female</item>
	</string-array>
	
	<string-array name="languages">
		<item>English</item>
		<item>Español</item>
	</string-array>
	
	<string-array name="measures">
	    <item>Inches-Pounds</item>
		<item>Centimeters-Kilograms</item>
	</string-array>
	
	<string-array name="measuresValues">
	    <item>"Inches-Pounds"</item>
	    <item>"Centimeters-Kilograms"</item>    
	</string-array>  
	
	<style name="boldText">
        <item name="android:textStyle">bold|italic</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>

    <style name="normalText">
        <item name="android:textStyle">normal</item>
        <item name="android:textColor">#C0C0C0</item>
    </style>

</resources>
