<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent">
      
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
	android:isScrollContainer="true"
	>	  
	
        <ImageView
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="#000"
        android:contentDescription="@string/splash_desc"
        android:src="@drawable/healthyplus_title" />
    	
     <RelativeLayout 	    
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15dp"
	 >

		<Button
		    android:id="@+id/btnAccessUser"
		    android:layout_width="130.67dp"
		    android:layout_height="40dp"
		    android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true"
		    android:layout_marginRight="15dp"
		    android:background="@drawable/button_style"
		    android:gravity="center"
		    android:text="@string/btn_access"
		    android:textColor="#fff"
		    android:textSize="17sp" />

		<Button
		    android:id="@+id/btnCreateNewUser"
		    android:layout_width="130.67dp"
		    android:layout_height="40dp"
		    android:layout_alignParentLeft="true"
		    android:layout_alignParentTop="true"
		    android:layout_marginLeft="17dp"
		    android:layout_w
		    android:background="@drawable/button_style"
		    android:gravity="center"
		    android:text="@string/btn_create_user"
		    android:textColor="#fff"
		    android:textSize="17sp" />		
	</RelativeLayout>
	
     <!-- THIS IS THE LAYOUT FOR CREATE NEW USER -->
	
	   <LinearLayout
	        android:id="@+id/create_user_form" 
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" 
			android:isScrollContainer="true"
			android:visibility="gone">
		
		
		   <TextView
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/txt_userinfo" 
		       android:textColor="#fff"
		       android:layout_marginTop="20dp"
		       android:layout_marginLeft="15dp"
		       android:gravity="left"
		       android:textSize="8pt"
		       
		   />	   
		   
		   <View
				android:layout_width="fill_parent"
				android:layout_height="0.5dip"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_gravity="center"
				android:background="#3e3e3e"
		   />
		   
		   		<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/firstname" 
			        android:layout_marginTop="5dp"
			        android:textSize="6pt"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/firstname"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="textPersonName"
					android:maxLines="1"
					android:maxLength="15"
				/>
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/lastname" 
			        android:textSize="6pt"
			        android:layout_marginTop="5dp"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/lastname"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="textPersonName"
					android:maxLines="1"
					android:maxLength="15"
				/>
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/username" 
			        android:textSize="6pt"
			        android:layout_marginTop="5dp"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/username"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="textPersonName"
					android:maxLines="1"
					android:maxLength="10"
				/>
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/age" 
			        android:layout_marginTop="5dp"
			        android:textSize="6pt"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/user_age"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="number"
					android:maxLines="1"
					android:maxLength="2"
				/>
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/gender" 
			        android:layout_marginTop="5dp"
			        android:textSize="6pt"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				
				<Spinner
					android:id="@+id/user_gender"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:prompt="@string/select"
					android:entries="@array/gender_list"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
				/>	
				
		   <TextView
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:text="@string/txt_health_info" 
		       android:textColor="#fff"
		       android:layout_marginTop="20dp"
		       android:layout_marginLeft="15dp"
		       android:gravity="left"
		       android:textSize="8pt"
		       
		   />	   	
				
			<View
				android:layout_width="132pt"
				android:layout_height="0.5dip"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="12dp"
				android:layout_marginRight="12dp"
				android:layout_gravity="center"
				android:background="#3e3e3e"
		   />
			
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/height" 
			        android:layout_marginTop="5dp"
			        android:textSize="6pt"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/user_height"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="numberDecimal"
					android:maxLines="1"
					android:maxLength="5"
				/>
				
				<TextView
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/weight" 
			        android:layout_marginTop="5dp"
			        android:textSize="6pt"
			        android:layout_marginLeft="15dp"
			        android:textColor="#fff"/>
					
				<EditText
					android:id="@+id/user_weight"
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_marginLeft="14dp"
					android:layout_marginRight="14dp"
					android:visibility="visible"
					android:inputType="numberDecimal"
					android:maxLines="1"
					android:maxLength="5"
				/>
				
			<Button
		    android:id="@+id/btnConfirmCreateUser"
		    android:layout_width="130.67dp"
		    android:layout_height="40dp"
		    android:background="@drawable/button_style"
		    android:layout_gravity ="center"
		    android:text="@string/btn_create_user"
		    android:textColor="#fff"
		    android:layout_marginTop="17dp"
		    android:textSize="17sp" />			   
	   </LinearLayout>   
	   
	   <!-- END LAYOUT CREATE NEW USER -->
	   
	   <!-- THIS IS THE LAYOUT FOR THE ACCESS -->
	    
     <LinearLayout 
        android:id="@+id/access_user_form" 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
		android:isScrollContainer="true"
		android:visibility="gone" >
				   
	   		<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/username" 
		        android:layout_marginTop="5dp"
		        android:textSize="6pt"
		        android:layout_marginLeft="15dp"
		        android:textColor="#fff"/>
				
			<EditText
				android:id="@+id/login_firstname"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:layout_marginLeft="14dp"
				android:layout_marginRight="14dp"
				android:visibility="visible"
				android:inputType="textPersonName"
				android:maxLines="1"
				android:maxLength="15"
			/>
	</LinearLayout>
	<!-- END LAYOUT ACCESS USER -->

</LinearLayout>
</ScrollView>